--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,9 @@
     "tests"
   ],
   "dependencies": {
-    "clndr": "~1.2.0"
+    "clndr": "~1.2.0",
+    "underscore": "~1.6.0",
+    "moment": "~2.6.0",
+    "jquery": "~2.1.1"
   }
 }
