--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
   "dependencies": {
     "pusher": "~0.1.3",
     "express": "~4.4.1",
-    "orchestrate": "~0.1.2"
+    "orchestrate": "~0.1.2",
+    "moment": "~2.6.0"
+  },
+  "devDependencies": {
+    "run-sequence": "~0.3.6",
+    "gulp-clean": "~0.3.0",
+    "gulp": "~3.7.0",
+    "gulp-less": "~1.2.3"
   }
 }
