--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Realtime appointments system using Orchestrate and Pusher",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "./node_modules/gulp/bin/gulp.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,12 @@
     "pusher": "~0.1.3",
     "express": "~4.4.1",
     "orchestrate": "~0.1.2",
-    "moment": "~2.6.0"
+    "moment": "~2.6.0",
+    "errorhandler": "~1.0.2",
+    "morgan": "~1.1.1",
+    "body-parser": "~1.3.0",
+    "underscore": "~1.6.0",
+    "jquery": "~2.1.1"
   },
   "devDependencies": {
     "run-sequence": "~0.3.6",
