--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
     "morgan": "~1.1.1",
     "body-parser": "~1.3.0",
     "underscore": "~1.6.0",
-    "jquery": "~2.1.1"
-  },
-  "devDependencies": {
+    "jquery": "~2.1.1",
     "run-sequence": "~0.3.6",
     "gulp-clean": "~0.3.0",
     "gulp": "~3.7.0",
